--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
     <td>
       <app-education></app-education>
     </td>
+    <td>
+      <app-skills></app-skills>
+    </td>
   </tr>
   
 </table>
