add languages branch #5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
     <td>
       <app-skills></app-skills>
     </td>
+    <td>
+      <app-languages></app-languages>
+    </td>
   </tr>
   
 </table>
