add interests branch #6

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
     <td>
       <app-languages></app-languages>
     </td>
+    <td>
+      <app-interests></app-interests>
+    </td>
   </tr>
   
 </table>
