add achievements branch #7

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
     <td>
       <app-interests></app-interests>
     </td>
+    <td>
+      <app-achievements></app-achievements>
+    </td>
   </tr>
   
 </table>
