--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <div class="cv-container">
   <header>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -9,6 +10,14 @@
   <div class="content">
     <div class="left-column">
       <app-work-experience></app-work-experience>
+      <app-education></app-education>
+    </div>
+
+    <div class="right-column">
+      <app-skills></app-skills>
+      <app-achievements></app-achievements>
+      <app-languages></app-languages>
+      <app-interests></app-interests>
     </div>
   </div>
 </div>
