--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <div class="cv-container">
   <header>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,5 +11,11 @@
       <app-work-experience></app-work-experience>
       <app-education></app-education>
     </div>
+
+    <div class="right-column">
+      <app-skills></app-skills>
+      <app-languages></app-languages>
+      <app-interests></app-interests>
+    </div>
   </div>
-  </div>
+</div>
