--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,20 @@
-<table border="1">
-  <tr>
-    <td colspan="2">
-      <app-header>
-
-      </app-header>
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <app-work-experience></app-work-experience>
-    </td>
-    <td>
-      <app-education></app-education>
-    </td>
-    <td>
-      <app-skills></app-skills>
-    </td>
-    <td>
-      <app-languages></app-languages>
-    </td>
-  </tr>
+<div class="cv-container">
+  <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <app-header></app-header>
+  </header>
   
-</table>
+  <div class="content">
+    <div class="left-column">
+      <app-work-experience></app-work-experience>
+      <app-education></app-education>
+    </div>
+
+    <div class="right-column">
+      <app-skills></app-skills>
+      <app-languages></app-languages>
+    </div>
+  </div>
+</div>
