--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
 
     <div class="right-column">
       <app-skills></app-skills>
+      <app-achievements></app-achievements>
+      <app-languages></app-languages>
+      <app-interests></app-interests>
     </div>
   </div>
 </div>
