--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,35 @@
-<table>
+
+<div class="header-container">
+  <table>
     <tr>
-        <td>
-            <p>Miguel Ángel Lara Baltazar</p>
-            <p>Ser SNI 3, y tener cuadritos</p>
-        </td>
-
-        <td>
-            <img src="../assets/images/Bangboo.jpg" width="100" height="100">
-        </td>
-
-        <td>
-            <ul>
-                <li>miguelbaltaz4r#gmail.com</li>
-                <li>272 165 1926</li>
-                <li>Orizaba, Veracruz</li>
-                <li>#MiguelLaraB</li>
-            </ul>
-        </td>
-
+      <td>
+        <p class="name">Miguel Ángel Lara Baltazar</p>
+        <p class="description">Quiero aprender y practicar más mis hobbies </p>
+        <p class="description">y también llegar a ser buen ingeniero</p>
+      </td>
+      <td>
+        <img src="../assets/images/Bangboo.jpg" class="perfil">
+      </td>
+      <td>
+        <ul>
+          <li>
+              <img src="../assets/images/email.png" alt="email">
+              miguelbaltaz4r#gmail.com
+          </li>
+          <li>
+              <img src="../assets/images/telefono.png" alt="telefono">
+              272 165 1926
+          </li>
+          <li>
+              <img src="../assets/images/ubicacion.png" alt="ubicacion">
+              Orizaba, Veracruz
+          </li>
+          <li>
+              <img src="../assets/images/github.png" alt="github">
+              #MiguelLaraB
+          </li>
+        </ul>
+      </td>
     </tr>
-</table>
+  </table>
+</div>
